Fixed x-overflow for footer

--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -173,7 +173,7 @@ body {
     height: 200px;
     .description {
       color: #000000;
-      padding: 40px 15px;
+      padding: 35px 15px;
       background-color: $descriptionBox;
       font-size: 18px;
       line-height: 32px;
@@ -195,9 +195,20 @@ body {
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
-  .timeline::after {
-    left: 31px;
-    width: 1px;
+  .timeline {
+    &::after {
+      left: 31px;
+      width: 1px;
+      height: 80%;
+    }
+
+    .content {
+      margin-left: 1px;
+      width: 75vw;
+      .description {
+        padding: 20px;
+      }
+    }
   }
 
   /* Full-width containers */
@@ -205,6 +216,7 @@ body {
     width: 100%;
     padding-left: 70px;
     padding-right: 25px;
+    margin-top: 36px;
     .spot {
       @include spot(false, true);
     }
@@ -215,10 +227,6 @@ body {
   /* Make all right containers behave like the left ones */
   .right {
     left: 0%;
-  }
-  .content {
-    margin-left: 1px;
-    width: 75vw;
   }
 }
 
